# spelt

./: .flaskenv  .gitignore  README.md  pyproject.toml
scripts/: generate_test_data.py
src/siva/: signal.py
src/siva/inspector/: app.py  routes.py  routes_old.py
src/siva/inspector/templates/: base.html  index.html  index_old.html
src/spelt/: cli.py  signal.py  utils.py
src/spelt/inspector/: __init__.py  js_snippets.py  routes.py
src/spelt/inspector/templates/: index.html
tests/: test_signal.py
