[project]
name = "spelt"
version = "0.1.0"
description = "Spend Less Time Plotting"
authors = [
    {name = "Fredrik Feyling", email = "fredrik.e.feyling@ntnu.no"},
]
dependencies = [
    "flask",
    "python-dotenv",
    "numpy",
    "bokeh==3.3.4",
    "watchdog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-watch",
]

[project.scripts]
spelt-inspect = "spelt.inspector.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
